--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "camera-detection(Collg)",
+  "name": "n8n-trading",
   "private": true,
   "scripts": {
     "build": "turbo build",
@@ -12,7 +12,7 @@
     "turbo": "^2.3.3",
     "typescript": "5.5.4"
   },
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "bun@1.0.0",
   "engines": {
     "node": ">=18"
   }
