--- a/apps/executor/package.json
+++ b/apps/executor/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "kiteconnect": "^5.1.0",
-    "mongoose": "^9.0.0"
+    "mongoose": "^9.0.0",
+    "resend": "^6.9.1"
   }
 }
