[feat]: added zerodha token expiry/update/delete, market open/close logic

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,8 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@n8n-trading/db": "workspace:^",
-    "@n8n-trading/types": "workspace:^"
+    "@n8n-trading/types": "workspace:^",
+    "@n8n-trading/executor-utils": "workspace:^"
   },
   "peerDependencies": {
     "typescript": "^5"
