--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,10 +13,12 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
